--- a/220325/jssandbox.html
+++ b/220325/jssandbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>yokkin.com</title>
 </head>
 
@@ -36,7 +36,7 @@
         </div>   
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <noscript>
         <p>このサイトはJavaScriptを使用しています。JavaScriptを有効にしてください。</p>
     </noscript>
