--- a/220321-transition/index.html
+++ b/220321-transition/index.html
@@ -9,10 +9,15 @@
 
 <body>
     <div class="container-full">
+        <input type="checkbox" title="I agree" id="checkboxAgree" name="checkboxAgree" />
+        <label for="checkboxAgree">I agree</label>
+
         <div class="trans-box2-wrap">
             <div class="trans-box2">
+                <div class="trans-box2-inside">
+                    <p class="trans-box2-inside-text">0%</p>
+                </div>
             </div>
-            <div class="trans-box2-inside">0%</div>
         </div>
     </div>
 
